2002-04-03  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/charmap.c (charmap_read): If the charmap doesn't
	define a code_set_name provide one based on the filename.

	* malloc/hooks.c: Define weak_variable correctly for _LIBC.

2001-12-28  Andreas Jaeger  <aj@suse.de>

	* time/mktime.c (__mktime_internal): Check for year < 70
	[PR libc/2738].

2002-04-03  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/x86_64/syscalls.list: Fix arguments for
	shmat.
	Reported by Andi Kleen <ak@suse.de>.

2002-04-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/w_lgamma.c: Initialized local_signgam.
	* sysdeps/generic/w_lgammaf.c: Likewise.
	* sysdeps/generic/w_lgammal.c: Likewise [PR libc/2854].

	* debug/catchsegv.sh (exval): Quote [ in pattern [PR libc/2902].
	Adjust for new output format of the backtrace functions.

	* misc/syslog.c (vsyslog): Only use cleanup handler if
	_LIBC_REENTRANT is defined [PR libc/2924].

	* libio/Makefile (tests): Add bug-ungetwc2.
	* libio/bug-ungetwc2.c: New file.

	* manual/install.texi: Typographical and grammatical cleanup.
	Patch by Dennis Grace <dgrace@us.ibm.com>.

	* sunrpc/rpc_svcout.c (write_real_program): Write "result, "
	parameter if mtflag.  Patch by <jeongyun@innovay.com>.

	* sunrpc/rpc_svcout.c (printif): Remove third parameter.  It was
	always "&".  Adjust callers.
	Add "_" prefix to several generated definitions.
	Patch by paul@serice.net [PR libc/3158].

2002-04-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/arm/dl-procinfo.c: Completely specify
	size of _dl_arm_cap_flags.
	Patch by enrico.scholz@informatik.tu-chemnitz.de [PR libc/3155].

	* sysdeps/unix/sysv/linux/arm/dl-procinfo.h (_DL_HWCAP_COUNT):
	Define as 8.

2002-03-22  H.J. Lu  <hjl@gnu.org>

	* scripts/firstversions.awk: Check the first version.

2002-04-02  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-deps.c (_dl_map_object_deps): The sorting of the
	dependencies must be stable to work correctly.