@@ -1,5 +1,5 @@
 /* dirname - return directory part of PATH.
-   Copyright (C) 1996, 2000, 2001 Free Software Foundation, Inc.
+   Copyright (C) 1996, 2000, 2001, 2002 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@cygnus.com>, 1996.
 
@@ -66,6 +66,8 @@ dirname (char *path)
 	  else
 	    last_slash = path + 1;
 	}
+      else
+	last_slash = runp;
 
       last_slash[0] = '\0';
     }
