@@ -1,3 +1,10 @@
+2002-04-04  Ulrich Drepper  <drepper@redhat.com>
+
+	* misc/dirname.c (dirname): Ignore trailing slashes at end of
+	non-null result [PR libc/2600].
+
+	* misc/tst-dirname.c: Add more tests.
+
 2002-04-03  Ulrich Drepper  <drepper@redhat.com>
 
 	* locale/programs/charmap.c (charmap_read): If the charmap doesn't
